# distributed-hash-cracker

./: CMakeLists.txt  PasswordCracker.sln  ProjectHome.md  config.h  crackscript.sh  testvectors.txt  watchscript.sh
Benchmark-MPI/: benchmark.cpp  opteronsubmit.sh
ComputeNode/: ComputeNode.cpp  Plugin.cpp
CoreHashes/: DoubleMD5.cpp  DoubleMD5.h  dllmain.cpp  hashexports.h  stdafx.cpp  targetver.h
CoreHashes-CUDA/: CUDA.rules  UnitTests.cpp  md5.cu  md5_kernel.cu  sha1.cu  sha1_kernel.cu
CoreHashes-generic/: CoreHashes-generic.cpp  CoreHashes-generic.h  MD5 test vectors.txt  MD5.cpp  MD5.h  MD5_amd64.asm  MD5_ps3.c  MD5_x86.asm  SHA1.cpp  SHA1.h  UnitTests.cpp  nasmrules.rules
CrackMaster/: CMakeLists.txt  MessageQueue.h  Mutex.cpp  Scheduler.cpp  UnitTests.cpp
CrackServer/: CrackServer.cpp  CrackServer.h  CrackServer.rc  CrackServer.vcproj  stdafx.cpp
CrackThread/: CrackThread.cpp  CrackThread.vcproj  dllmain.cpp
CrackThread-CUDA/: CrackThread-CUDA.h  CrackThread.cu  UnitTests.cpp
CrackThread-PS3/: CrackThread-PS3.cpp  Generate.c  Makefile  Test.c
CrackThread-generic/: CrackThread-generic.h  UnitTests.cpp
Cracker-common/: BaseNInteger.h  Cracker-common.h  HashingAlgorithm.cpp  HashingAlgorithm.h  NetworkSocket.cpp  UnitTests.cpp  dllmain.cpp
NodeLauncher/: CMakeLists.txt  XmlParser.cpp
PasswordCracker/: PasswordCracker.cpp  PasswordCracker.rc
UnitTests/: Plugin.h
agent/: ComputeThreadProc.cpp  ControllerLink.cpp  LowLevel.cpp  main.cpp  md4_kernel.cu  md4ntlm_kernel_core.h  md5_kernel.cu  ntlm_kernel.cu  sha1_kernel.cu  ssha_kernel_core.h  testvectors.xml  version.h
branches/: Contributors.txt
branches/bglmpi/: CMakeLists.txt  watchscript.sh
branches/bglmpi/src/: CMakeLists.txt  MD5.cpp  benchmarks.cpp  main.cpp
branches/fpga/fpgacrack/: GuessGenerator.v  MD5Pipeline.v  charset.coe  fpgacrack.gise  fpgacrack.xise  md5cracker.v  testMD5Pipeline.v
branches/mpi/: testvectors.txt
branches/mpi/doc/: designgoals.txt  speeds.txt
branches/mpi/src/: CMakeLists.txt  benchmarks.cpp  main.cpp  md5_amd64.asm  mpicrack.h  search.asm
branches/v1/CoreHashes/: CoreHashes.cpp  CoreHashes.rc  CoreHashes.vcproj  MD4.cpp  MD4.h  MD5.cpp  MD5.h  resource.h  stdafx.h
branches/v1/CrackServer/: resource.h  stdafx.h  targetver.h
branches/v1/CrackThread/: CrackThread.h  CrackThread.rc  resource.h  stdafx.cpp  stdafx.h  targetver.h
branches/v1/PasswordCracker/: MainDialog.cpp  MainDialog.h  NodeManager.cpp  NodeManager.h  PasswordCracker.h  PasswordCracker.vcproj  resource.h  stdafx.cpp  stdafx.h
branches/v2/: CMakeLists.txt  config.h.in
branches/v2/Benchmark-MPI/: MD5.cpp  Makefile_bgl  Makefile_opt  bgljob.sh  bglsubmit.sh  opteronjob.sh
branches/v2/ComputeNode/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  CrackThread.h  DirList.cpp  DirList.h  UnitTests.cpp
branches/v2/CoreHashes-CUDA/: CMakeLists.txt  CoreHashes-CUDA.cu  CoreHashes-CUDA.h
branches/v2/CoreHashes-generic/: CMakeLists.txt  MD5_amd64.h  MD5_x86.h  MD5crypt.cpp  MD5crypt.h  Null_ps3.c  SHA1_x86.h
branches/v2/CrackMaster/: CommandLine.cpp  CrackMaster.cpp  CrackMaster.h  MessageQueue.cpp  Mutex.h
branches/v2/CrackThread-CUDA/: CMakeLists.txt
branches/v2/CrackThread-PS3/: CrackThread-PS3.h
branches/v2/CrackThread-generic/: CMakeLists.txt  CrackThread-generic.cpp
branches/v2/Cracker-common/: BaseNInteger.cpp  CMakeLists.txt  NetworkSocket.h  Thread.cpp  Thread.h
branches/v2/NodeLauncher/: NodeLauncher.cpp  XmlParser.h
branches/v2/UnitTests/: CMakeLists.txt  Main.cpp
branches/v3/agent/: ControllerLink.cpp
controller/: ajaxserver.php  controller.php  header.php  setup.php  ui.php
doc/: speeds.txt
fpgacrack/: GuessGenerator.v  MD5Pipeline.v  coregen.cgp  fpgacrack.gise  fpgacrack.xise  guessgen.wcfg  md5cracker.ucf  md5cracker.v  testGenerator.v  testMD5Pipeline.v
fpgacrack/ipcore_dir/: CharsetTable.cgc
src/: BaseN.cpp  BaseN.h  CMakeLists.txt  benchmarks.cpp  main.cpp  mpicrack.h  search.asm
trunk/agent/: CMakeLists.txt  ComputeThreadProc.cpp  md4_kernel.cu  md5_kernel.cu  md5_kernel_core.h  ntlm_kernel.cu  ssha_kernel.cu  version.h
trunk/controller/: ui.php
